--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,7 +49,7 @@ jobs:
                 run: |
                     npm run build
 
-            -   name: Send code coverage report to Codecov.io
+            -   name: Send code coverage report to codecov.io
                 uses: codecov/codecov-action@v3
                 with:
                     token: ${{ secrets.CODECOV_TOKEN }}
