--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bemit/cloud-id",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "",
     "homepage": "https://bemit.codes",
     "author": {
@@ -44,7 +44,7 @@
     "peerDependencies": {
         "@bemit/redis": "~0.0.7",
         "redis": "^4.0.2",
-        "superagent": "^7.1.1"
+        "superagent": "^7.1.5 || ^8.0.0"
     },
     "dependencies": {
         "jsonwebtoken": "^8.5.1"
@@ -52,8 +52,8 @@
     "devDependencies": {
         "@bemit/redis": "~0.0.7",
         "@types/jsonwebtoken": "^8.5.8",
-        "@types/superagent": "^4.1.14",
-        "superagent": "^7.1.1",
+        "@types/superagent": "^4.1.15",
+        "superagent": "^8.0.0",
         "@babel/cli": "^7.14.5",
         "@babel/core": "^7.14.6",
         "@babel/eslint-parser": "^7.18.2",
