--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bemit/cloud-id",
-    "version": "0.1.3",
+    "version": "0.2.0",
     "description": "",
     "homepage": "https://bemit.codes",
     "author": {
@@ -42,7 +42,7 @@
         "dtsgen": "tsc -d --emitDeclarationOnly --pretty && merge-dirs build/dts build && rm -rf build/dts && rimraf build/**/*.test.*"
     },
     "peerDependencies": {
-        "@bemit/redis": "~0.0.7",
+        "@bemit/redis": "~0.1.0-alpha.0",
         "redis": "^4.0.2",
         "superagent": "^7.1.5 || ^8.0.0"
     },
@@ -50,7 +50,7 @@
         "jsonwebtoken": "^8.5.1"
     },
     "devDependencies": {
-        "@bemit/redis": "~0.0.7",
+        "@bemit/redis": "~0.1.0-alpha.0",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/superagent": "^4.1.15",
         "superagent": "^8.0.0",
